Remove suspended page

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "public"
-  command = "hugo --minify --gc && cp -p suspended.html public/"
+  command = "hugo --minify --gc"
   
 [build.environment]
-  HUGO_VERSION = "0.87.0"
+  HUGO_VERSION = "0.136.1"
   HUGO_BASEURL = "/"
 
 [[headers]]
@@ -14,10 +14,3 @@
   X-XSS-Protection = "1; mode=block"
   Referrer-Policy = "same-origin"
   Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-
-## This rule redirects everything to the pending page
-[[redirects]]
-  from = "/*"
-  to = "/suspended.html"
-  status = 200
-  force = true # COMMENT: ensure that we always redirect
