--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   
 [build.environment]
   HUGO_VERSION = "0.136.1"
-  HUGO_BASEURL = "/"
+  HUGO_BASEURL = "https://ovarosboutique.hu"
 
 [[headers]]
   for = "/*" # This defines which paths this specific [[headers]] block will cover.
