--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -5,7 +5,7 @@ slider:
   slider_item:
     # slider item loop
     - title: "ÓVÁROS BOUTIQUE"
-      title2: "Comfort - Culture - Relaxation"
+      title2: "Comfort - Culture - Chill"
       content: "Located in the heart of the beautiful old town of Veszprém, our quiet charming apartment, decorated with unique, artistic painting, is the perfect retreat for couples, but with its comfort, brand new furnishings, and well-equipped kitchen, it is also an exquisite choice for businessmen traveling alone."
       # content_image: "booking_score.png"
       animation_in: "left"
@@ -18,7 +18,7 @@ slider:
 
 ############################## modal ##################################
 modal:
-  enable: true
+  enable: false
   title: "Our Special Offer!"
   action: "Close"
   image: "images/etc/MBH_SZEP_Kartya.png"
@@ -39,13 +39,10 @@ about:
     # about item loop
     - title: "Are you planning a trip to Veszprém and looking for accommodation? You found it!"
       content: >
-        Our aristocratic apartment - Óváros Boutique - is located right in the middle of Veszprém, on Óváros tér, the expression „everything is within arm's reach” is not a marketing ploy: the Veszprém Castle, the Heroes' Gate, the Fire Tower, Dubniczay Palace, St. Michael's Cathedral are a 2-minute walk away available. Óváros tér is the beating heart of Veszprém. Veszprém, which was chosen as Europe's cultural capital, and the nearby Bakony and Balaton offer many opportunities, and the apartment is an ideal starting point for pampering yourself in the many restaurants, design cafes, or fascinating museums of the area. Festival in Veszprém? A hike in Bakony? Skiing in Eplény? Balaton swimming, bobsledding, wine tasting? Or just comfort and relaxation for two on the king-size bed, from which we don't have to miss the latest Netflix series?
-        
-        
-        The choice is yours...
-        
-        
-        We look forward to seeing you!
+        The Old Town Boutique is located in the heart of the historical city center of Veszprém, at the foot of the Castle, on the Old Town Square, making the wish of „everything is within reach” come true: the Veszprém Castle, the Heroes' Gate, the Fire Tower, the Dubniczay Palace, and the St. Michael's Cathedral are within a few minutes' walk.
+
+
+        The Old Town Boutique Apartment awaits you with personal attention and the genuine hospitality of a family business.
       image: "images/backgrounds/page-about.png"
       # available animation : left, right, up, down
       button:
@@ -56,37 +53,16 @@ about:
     # about item loop
     - title: "About accommodation"
       content: >
-        We furnished every room of the apartment with great care and modern design, unique mural in every room:
+        We recommend the Old Town Boutique to you if you want
 
 
-        • Comfortable double bedroom, king size double bed
+        • to leave the busy weekdays behind you. Our smart lock allows your arrival and departure to be convenient, flexible, and contactless, and you can enjoy your rest in complete comfort on the king-size bed.
 
 
-        • Fully equipped kitchen
+        • to enjoy the proximity of the city center and attractions in a quiet, peaceful place. The most important services, landmarks, and program venues are within easy walking distance. Forget about the car and public transportation.
 
 
-        • Bathroom with a shower cabin awaits those who come here
-
-
-        • **Smart lock:** arrive and leave conveniently, contact-free
-        
-        
-        • Cooling-heating air conditioning
-        
-        
-        • Free wifi 
-        
-        
-        • Smart TV device with more than 100 channels
-        
-        
-        • **Netflix**, Youtube
-        
-        
-        • Safe box
-
-
-        • Child-friendly accommodation: preparation as desired
+        • to arrange your meals (breakfast, lunch, dinner) according to your own taste. Our equipped kitchen provides excellent help for this, and there are numerous restaurants, fashionable cafes, and pastry shops in the immediate vicinity of the apartment.
 
       image: "images/backgrounds/page-accomodation.png"
       # available animation : left, right, up, down
@@ -96,31 +72,11 @@ about:
         link: "booking/"
 
     # about item loop
-    - title: "Equipment"
+    - title: "Adventure"
       content: >
-        **Kitchen:**
-        Cutlery, combined stove, fridge, microwave oven, dishwasher, Nespresso coffee machine, coffee and tea preparation, kettle, toaster, full kitchen equipment
+        The Old Town Square is the beating heart of the city. Veszprém, the European Capital of Culture, the nearby Bakony and Balaton offer many opportunities, and the apartment is an ideal starting point to indulge in the many restaurants, design cafes, or fascinating museums in the area. Festival in Veszprém? Hiking in the Bakony? Skiing in Eplény? Swimming in Lake Balaton, bobsleighing, wine tasting? Or just comfort and relaxation for two on the king-size bed, from where we don't have to miss the latest Netflix series?
 
-
-        **Bathcroom:**
-        LED mirror, soft towels and exit, hair dryer, washing machine, towel dryer, WC in a separate room
-      image: "images/backgrounds/page-equipment.png"
-      # available animation : left, right, up, down
-      button:
-        enable: true
-        label: "Book now"
-        link: "booking/"
-
-    # about item loop
-    - title: "We recommend the Óváros Boutique to you if"
-      content: >
-        • You like to take care of the food (breakfast, lunch, dinner) according to your own taste. Our fully equipped kitchen and dining room will help you with this.
-
-
-        • You would retreat a little from the hectic everyday life in an intimate way. The check-in and check-out and the operation of the locks are done with the help of a mobile application. The caterers are of course available by phone if necessary, but it is not necessary to meet them in person on-site.
-
-
-        • Proximity to the city center and attractions is important to you.
+        The choice is yours...
       image: "images/backgrounds/page-ambient.png"
       # available animation : left, right, up, down
       button:
@@ -145,5 +101,35 @@ reviews:
       review: Ideális elhelyezkedés, minden fontos szolgáltatás és látnivaló gyalogosan elérhető, de a lakás csendes, mert egy kis utcában található. A lakás stílusosan berendezett, jól felszerelt, ragyogó tisztaság, az ágy nagyon kényelmes. Tetszett a különleges falfestés és az üdvözlőajándék is. Plusz pont jár az intelligens zárnak, remek megoldás, amivel teljesen önállóan érkezhetsz és távozhatsz.
       origin_flag: "de"
       origin: "Germany"
+      score: "10.0"
+
+    - author: "Réka"
+      review: Abszolút minden! A design, a minőség, a kedvesség, az elhelyezkedés, az ár, a felszereltség, a parkolás, a wifi, a welcome drink, a bekészített kávé, tea, a rengeteg apró figyelmesség, például esernyő, minden tökéletes! Veszprémben csak itt fogok megszállni, ha újra jövök.
+      origin_flag: "hu"
+      origin: "Magyarország"
+      score: "10.0"
+    
+    - author: "István"
+      review: Az apartman a történelmi városközpont szívében található, amely egyedi varázsát adja. Veszprémben minden látnivaló gyalog elérhető.
+      origin_flag: "hu"
+      origin: "Magyarország"
+      score: "9.0"
+
+    - author: "Dávid"
+      review: Tisztaság,fogadtatás. Rendben volt minden,nagyon kedves szállásadó.
+      origin_flag: "hu"
+      origin: "Magyarország"
+      score: "10.0"
+    
+    - author: "János"
+      review: Elképesztően csodás az apartman. Igényes és gondosan válogatott kiegészítők a lakás minden pontján. A felszereltség maximális!
+      origin_flag: "hu"
+      origin: "Magyarország"
+      score: "10.0"
+    
+    - author: "Krisztina"
+      review: Gyönyörű apartmant varázsoltál, nagyon ízléses, otthonos, illatos, kényelmes, kedves szállás.
+      origin_flag: "hu"
+      origin: "Magyarország"
       score: "10.0"
       
